--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -27,7 +27,7 @@
     <div id="progress-bar"></div>
     {% include "includes/toast.html" %}
 
-    <div class="flex flex-col px-4">
+    <div class="px-4">
       {% if not session.get('user_id') %}
       <header
         class="flex items-center justify-between bg-white border-b border-gray-200 px-4 py-2.5 dark:bg-gray-800 dark:border-gray-700 fixed inset-x-0 top-0 z-10">
