toast api component

--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -86,7 +86,8 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 name="first_name"
                 id="first_name"
                 value="{{ first_name }}"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" />
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
             </div>
             <div
               id="last_name_container"
@@ -101,7 +102,8 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 name="last_name"
                 id="last_name"
                 value="{{ last_name }}"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" />
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
             </div>
             <div
               id="email_container"
@@ -116,7 +118,8 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 name="email"
                 id="email"
                 value="{{ email }}"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" />
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
             </div>
             <div
               id="birthday_container"
@@ -131,7 +134,8 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 name="birthday"
                 id="birthday"
                 value="{% if birthday %}{{ birthday }}{% endif %}"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" />
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
             </div>
             <div class="col-span-6 sm:col-full">
               <button
@@ -262,6 +266,8 @@ main %} {% include "includes/dashboard-header.html" %} {% include
   </div>
 </main>
 
-<script src="{{url_for('static',filename='js/profile-upload.js')}}"></script>
+<script
+  type="module"
+  src="{{url_for('static',filename='js/profile-upload.js')}}"></script>
 
 {% endblock %}
