--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -30,18 +30,17 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 id="upload-button"
                 class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 disabled:opacity-70 disabled:pointer-events-none"
                 onclick="document.getElementById('fileInput').click()">
-                <span id="button-svg">
-                  <svg
-                    class="w-4 h-4 mr-2 -ml-1"
-                    fill="currentColor"
-                    viewBox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.413l1.293 1.293a1 1 0 001.414-1.414l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13H5.5z"></path>
-                    <path d="M9 13h2v5a1 1 0 11-2 0v-5z"></path>
-                  </svg>
-                </span>
-                Upload picture
+                <svg
+                  class="w-4 h-4 mr-2 -ml-1"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.413l1.293 1.293a1 1 0 001.414-1.414l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13H5.5z"></path>
+                  <path d="M9 13h2v5a1 1 0 11-2 0v-5z"></path>
+                </svg>
+                {% if image_src and image_src != '/static/assets/avatar.png'
+                %}Update picture{% else %}Upload picture{% endif %}
               </button>
               <input type="file" id="fileInput" style="display: none" />
               {% if image_src == '/static/assets/avatar.png' %}
